[Qt] Fix focus ring outline color support https://bugs.webkit.org/show_bug.cgi?id=50325

Reviewed by Andreas Kling.

WebCore:

* platform/graphics/qt/GraphicsContextQt.cpp:
(WebCore::GraphicsContext::drawFocusRing):

Take the outline width into account when drawing the focus ring of image map.
Change the outline-style from dotted to solid. The default outline-width is
5 pixels, and dotted lines just don't make sense anymore.
Give the focus ring alpha of 50%, following what other ports do.
Save and restore the pen when drawing a focus ring.

LayoutTests:

* platform/qt/Skipped:
* platform/qt/fast/images/imagemap-focus-ring-expected.checksum:
* platform/qt/fast/images/imagemap-focus-ring-expected.png:
* platform/qt/fast/images/imagemap-focus-ring-outline-color-expected.checksum: Added.
* platform/qt/fast/images/imagemap-focus-ring-outline-color-expected.png: Added.
* platform/qt/fast/images/imagemap-focus-ring-outline-color-expected.txt: Added.
* platform/qt/fast/images/imagemap-focus-ring-outline-color-explicitly-inherited-from-map-expected.checksum: Added.
* platform/qt/fast/images/imagemap-focus-ring-outline-color-explicitly-inherited-from-map-expected.png: Added.
* platform/qt/fast/images/imagemap-focus-ring-outline-color-explicitly-inherited-from-map-expected.txt: Added.
* platform/qt/fast/images/imagemap-focus-ring-outline-color-not-inherited-from-map-expected.checksum: Added.
* platform/qt/fast/images/imagemap-focus-ring-outline-color-not-inherited-from-map-expected.png: Added.
* platform/qt/fast/images/imagemap-focus-ring-outline-color-not-inherited-from-map-expected.txt: Added.
* platform/qt/fast/images/imagemap-focus-ring-zoom-expected.checksum:
* platform/qt/fast/images/imagemap-focus-ring-zoom-expected.png:



Canonical link: https://commits.webkit.org/63783@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@73361 268f45cc-cd09-0410-ab3c-d52691b4dbfc